--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 
 <script>
-window.location.replace('http://192.168.0.2/iposx/ipos/');
+window.location.replace('http://192.168.0.2/iposx/ipos2/');
 </script>
 </head>
 
