--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <script>
 window.location.replace('http://192.168.0.2/iposx/ipos/index.cfm');
+  var ref = cordova.InAppBrowser.open('http://apache.org', '_blank', 'location=yes');
 </script>
 </head>
 
